@@ -1,3 +1,6 @@
+   - Get connection timeouts and connection reconnects
+     working in the generic ConnectionManager role.
+
    - Add link to syslog input
 
    - AMQP input/output is on CPAN
